FFmpeg-Android: Set the configured FPS on Camera

Add implementation for setting up FPS on Android Camera.

[0]QCameraFormat (beyond the pixel format and resolution) contains also
max/min frame rate. Those parameters were not passed and set on Android
Camera.

After this commit, the whole configuration kept in QCameraFormat is set
on device during camera activation.

[0]https://doc.qt.io/qt-6/qcameraformat.html

Task-number: QTBUG-113399
Pick-to: 6.7 6.5
Change-Id: Iba4f4c0c8ac4bbdaf3488a0a9005bff42390c428
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>